--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <header>
-        <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        <a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html">
+            <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+        </a>
         <nav>
             <ul>
                 <li>projets</li>
                 <li>contact</li>
-                <li>login</li>
+                <li><a href="assets/login.html">login</a></li>
                 <li><img src="icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
@@ -24,12 +26,12 @@
     <main>
         <section id="login">
             <h2>Log in</h2>
-            <form action="#" method="post">
+            <form action="" method="post">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
                 <label for="password">Mot de passe</label>
                 <input type="password" name="password" id="password">
-                <input type="submit" value="Se connecter">
+                <input type="submit" value="Se connecter" id="btn-connexion">
                 <a href="#">Mot de passe oublié</a>
             </form>
         </section>
