--- a/FrontEnd/assets/login.html
+++ b/FrontEnd/assets/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="/Portfolio-architecte-sophie-bluel/FrontEnd/index.html">
+        <a href="/index.html">
             <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         </a>
         <nav>
