--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,15 +19,15 @@
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li><a href="assets/login.html">login</a></li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li><a href="login.html">login</a></li>
+			<li><img src="assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
 	<section id="introduction">
 		<figure>
-			<img src="./assets/images/sophie-bluel.png" alt="">
+			<img src="assets/images/sophie-bluel.png" alt="">
 		</figure>
 		<article>
 			<h2>Designer d'espace</h2>
@@ -107,6 +107,6 @@
 		</ul>
 	</nav>
 </footer>
-<script src="./assets/script.js"></script>
+<script src="assets/script.js"></script>
 </body>
 </html>
