--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -6,12 +6,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="assets/login.css">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <a href="/index.html">
+        <a href="index.html">
             <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         </a>
         <nav>
@@ -19,7 +19,7 @@
                 <li>projets</li>
                 <li>contact</li>
                 <li><a href="assets/login.html">login</a></li>
-                <li><img src="icons/instagram.png" alt="Instagram"></li>
+                <li><img src="assets/icons/instagram.png" alt="Instagram"></li>
             </ul>
         </nav>
     </header>
@@ -44,5 +44,5 @@
         </nav>
     </footer>
 </body>
-<script src="login.js"></script>
+<script src="assets/login.js"></script>
 </html>
