--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="https://kit.fontawesome.com/b3e0c7bcd9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
@@ -24,6 +24,14 @@
 		</ul>
 	</nav>
 </header>
+<aside class="modal" aria-hidden="true" role="dialog">
+	<div class="modal-wrapper">
+		<i class="fa-solid fa-xmark"></i>
+		<h3>Galerie photo</h3>
+		<hr>
+		<button class="btn-style-selected">Ajouter une photo</button>
+	</hr>
+</aside>
 <main>
 	<section id="introduction">
 		<figure>
@@ -108,5 +116,6 @@
 	</nav>
 </footer>
 <script src="assets/script.js"></script>
+<script src="assets/app.js"></script>
 </body>
 </html>
