--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Sophie Bluel - Architecte d'intérieur</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://kit.fontawesome.com/b3e0c7bcd9.js" crossorigin="anonymous"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	<script src="https://kit.fontawesome.com/b3e0c7bcd9.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
 	</a>
 	<nav>
 		<ul>
-			<li>projets</li>
+			<li class="js-modal">projets</li>
 			<li>contact</li>
 			<li><a href="login.html">login</a></li>
 			<li><img src="assets/icons/instagram.png" alt="Instagram"></li>
@@ -26,7 +27,7 @@
 </header>
 <aside class="modal" aria-hidden="true" role="dialog">
 	<div class="modal-wrapper">
-		<i class="fa-solid fa-xmark"></i>
+		<i class="fa-solid fa-xmark js-modal-close"></i>
 		<h3>Galerie photo</h3>
 		<hr>
 		<button class="btn-style-selected">Ajouter une photo</button>
@@ -46,6 +47,7 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<button class="modifier js-modal">modifier</button>
 		<div class="gallery">
 			<!-- <figure>
 				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
