--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 	</a>
 	<nav>
 		<ul>
-			<li class="js-modal">projets</li>
+			<li>projets</li>
 			<li>contact</li>
 			<li><a href="login.html">login</a></li>
 			<li><img src="assets/icons/instagram.png" alt="Instagram"></li>
