modal suppression des elements

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -29,7 +29,9 @@
 	<div class="modal-wrapper">
 		<i class="fa-solid fa-xmark js-modal-close"></i>
 		<h3>Galerie photo</h3>
-		<hr>
+		<div class="fig-container">
+		</div>
+		<hr >
 		<button class="btn-style-selected">Ajouter une photo</button>
 	</hr>
 </aside>
