modal post project

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -35,16 +35,34 @@
 		<div class="modal-wrapper">
 			<i class="fa-solid fa-xmark js-modal-close"></i>
 			<h3>Galerie photo</h3>
-			<div class="fig-container">
-			</div>
-			<hr >
+			<div class="fig-container"></div>
+		<hr>
 			<button class="btn-style-selected">Ajouter une photo</button>
-		</hr>
+		</div>
+		<div class="modal-add-project">
+			<i class="fa-solid fa-arrow-left"></i>
+			<i class="fa-solid fa-xmark js-modal-close"></i>
+			<h3>Ajout photo</h3>
+			<div class="add-img">
+				<i class="fa-regular fa-image"></i>
+				<button>+ Ajouter photo</button>
+				<p>jpg.png : 4mo max</p>
+			</div>
+			<form action="">
+				<label for="title">Titre</label>
+				<input type="text" name="title" id="title">
+				<label for="categorie">Catégorie</label>
+				<select name="categorie" id="categorie">
+				</select>
+				<hr>
+				<input type="submit">
+			</form>
+		</div>
 	</aside>
 	<main>
 		<section id="introduction">
 			<figure>
-				<img src="assets/images/sophie-bluel.png" alt="">
+				<img src="assets/images/sophie-bluel.png" alt="photo de profil">
 			</figure>
 			<article>
 				<h2>Designer d'espace</h2>
