project post modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -55,7 +55,7 @@
 				<select name="categorie" id="categorie">
 				</select>
 				<hr>
-				<input type="submit">
+				<button class="btn-style-selected" id="btn-submit-work">Valider</button>
 			</form>
 		</div>
 	</aside>
