ajout project modal

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -41,11 +41,12 @@
 		</div>
 		<div class="modal-add-project">
 			<i class="fa-solid fa-arrow-left"></i>
-			<i class="fa-solid fa-xmark js-modal-close"></i>
+			<i class="fa-solid fa-xmark js-modal-closes"></i>
 			<h3>Ajout photo</h3>
 			<div class="add-img">
 				<i class="fa-regular fa-image"></i>
-				<button>+ Ajouter photo</button>
+				<label for="btn-add-img" id="label-add-img">+ Ajouter photo</label>
+				<input type="file" id="btn-add-img">
 				<p>jpg.png : 4mo max</p>
 			</div>
 			<form action="">
