--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -43,6 +43,7 @@
 			<i class="fa-solid fa-arrow-left"></i>
 			<i class="fa-solid fa-xmark js-modal-close"></i>
 			<h3>Ajout photo</h3>
+
 			<div class="add-img">
 				<div class="img-container">
 					<i class="fa-regular fa-image"></i>
@@ -53,6 +54,7 @@
 				<div class="container-preview-img">
 				</div>
 			</div>
+			<p id="img-error-msg" class="error-msg"></p>
 			<form action="">
 				<label for="title">Titre</label>
 				<input type="text" name="title" id="title">
