--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -26,6 +26,7 @@
     <main>
         <section id="login">
             <h2>Log in</h2>
+            <p class="error-msg"></p>
             <form action="" method="post">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
